add blinx to lang

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -80,6 +80,7 @@
   "stepFeaturesMatterDesc": "Matter protocol",
   "stepFeaturesLvglDesc": "LVGL",
   "stepFeaturesLvglTooltip": "Light and Versatile Embedded Graphics Library",
+  "stepFeaturesBlinxDesc" : "BLINX",
 
   "stepCustomParamsTitle": "Parámetros Personalizados",
   "stepCustomParamsDesc": "A continuación puede introducir los parámetros opcionales personalizados, que se incluirán al final del archivo {filename}.",
