--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -80,6 +80,7 @@
   "stepFeaturesMatterDesc": "Matter protocol",
   "stepFeaturesLvglDesc": "LVGL",
   "stepFeaturesLvglTooltip": "Light and Versatile Embedded Graphics Library",
+  "stepFeaturesBlinxDesc" : "BLINX",
 
   "stepCustomParamsTitle": "Zusätzliche Parameter",
   "stepCustomParamsDesc": "Unterhalb kannst du individuelle Parameter eintragen, die am Ende der {filename} eingefügt werden. Wenn du nicht weisst, was das ist, klicke einfach Weiter.",
