--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -80,6 +80,7 @@
   "stepFeaturesMatterDesc": "Matter protocol",
   "stepFeaturesLvglDesc": "LVGL",
   "stepFeaturesLvglTooltip": "Light and Versatile Embedded Graphics Library",
+  "stepFeaturesBlinxDesc" : "BLINX",
 
   "stepCustomParamsTitle": "Paramètres personnalisés",
   "stepCustomParamsDesc": "Vous pouvez saisir ci-dessous des paramètres personnalisés, qui seront inclus à la fin du fichier {filename}. Si vous ne savez pas ce que c'est, cliquez sur Suivant..",
